fix: remove rule on small layout (#7449)

--- a/src/css/components/_adaptive.scss
+++ b/src/css/components/_adaptive.scss
@@ -34,7 +34,7 @@
     .vjs-subtitles-button,
     .vjs-audio-button,
     .vjs-volume-control {
-      display: none !important;
+      display: none;
     }
 
     // Reset the size of the volume panel to the default so we don't see a big
